[metadata]
name = torch-treecrf
version = attr: torch_treecrf.__version__
author = Martin Larralde
author_email = martin.larralde@embl.de
url = https://github.com/althonos/torch-treecrf
description =  A PyTorch implementation of Tree-structured Conditional Random Fields. 
license = MIT

[options]
zip_safe = true
packages = torch_treecrf
python_requires = >=3.6
setup_requires =
    setuptools >=46.4
    astor ~=0.6
install_requires =
    torch ~=1.0