[metadata]
name = torch-treecrf
version = attr: torch_treecrf.__version__
author = Martin Larralde
author_email = martin.larralde@embl.de
url = https://github.com/althonos/torch-treecrf
description =  A PyTorch implementation of Tree-structured Conditional Random Fields. 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = torch, 
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Software Development :: Libraries :: Python Modules 
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics 
    Typing :: Typed
project_urls =
    Bug Tracker = https://github.com/althonos/torch-treecrf/issues
    Changelog = https://github.com/althonos/torch-treecrf/blob/master/CHANGELOG.md
    Coverage = https://codecov.io/gh/althonos/torch-treecrf/
    Builds = https://github.com/althonos/torch-treecrf/actions
    PyPI = https://pypi.org/project/torch-treecrf

[options]
zip_safe = true
packages = torch_treecrf
python_requires = >=3.6
setup_requires =
    setuptools >=46.4
install_requires =
    torch ~=1.0

[options.package_data]
peptides = py.typed

# --- Python tools configuration ---------------------------------------------

[coverage:report]
include = torch_treecrf/*.py
show_missing = true
exclude_lines =
    pragma: no cover
    if typing.TYPE_CHECKING:
    @abc.abstractmethod
    @abc.abstractproperty
    raise NotImplementedError
    return NotImplemented